# multiplayer-platformer-se

./: .gitignore  README.md
Client/: game  gamestructs.h  level.cpp  level.h  main.cpp  message_generated.h  player.cpp  player.h  tiles.cpp  tiles.h
Client/TileMapFiles/: level_background.csv  level_finishLine.csv  level_moving_platform.csv  level_powerups.csv  level_rocks.csv  level_spikes.csv  level_terrain.csv  level_tree.csv  level_water.csv
Client/tests/: CMakeLists.txt  EntityTest.cpp  MechanicsTest.cpp  PhysicsTest.cpp  TestGlobals.cpp
Client/tests/Integration/: ClientIntegrationTest.cpp
Client/tests/Unit/: EntityTest.cpp  MechanicsTest.cpp  PhysicsTest.cpp
Tiled Files/: finishLine.tsx  gameLevel.tiled-session  platform.tsx  rocks.tsx  spikes.tsx  terrain_tiles.tsx  trees.tsx
server/: pom.xml
server/src/main/java/: Calculate.java  Level.java  MovingPlatform.java  Player.java  PowerUp.java  SendServerMessage.java  Server.java  Shell.java  Tile.java  message.fbs  receive.java
server/src/main/java/Game/: ClientMessage.java  GameData.java  GameMessage.java  PlayerData.java  ServerMessage.java  Vec2.java
server/src/main/java/com/google/flatbuffers/: Utf8Safe.java
server/src/main/java/com/google/flatbuffers/reflection/: Enum.java  EnumVal.java  Field.java  Object.java  RPCCall.java  Schema.java  Service.java
server/src/test/java/: CalculateTest.java  LevelTest.java  MovingPlatformTest.java  PlayerMechanicsTest.java  PlayerTest.java  PowerUpTest.java  ServerIntegrationIT.java  ServerTest.java  ServerUtilityTest.java  ShellTest.java  TileTest.java  Vec2Test.java
